[tool.poetry]
name = "py-cloud-docker-watch"
version = "0.1.0"
description = ""
authors = ["spaceofmiah"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typed-argument-parser = "^1.9.0"
docker = "^7.0.0"
boto3 = "^1.34.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
